--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Run Buddy</title>
     </head>
     <body>
        <!-- navigation -->
        <header>
          <h1>
              <a href="/">RUN BUDDY</a>
-             </h1>
+        </h1>
          <nav>
              <!-- Unordered list element-->
              <ul>
@@ -92,58 +92,58 @@
             <div class="flex-row">
                 <h2 class="section-title secondary-border">What You Do</h2>
             </div>
-        <div class="step">
-            <h3> Step 1.</h3>
-            <div class="step-info">
-                <div class="step-img">
-                    <img src="./assets/images/step-1.svg" alt="" />
-                </div>
-                <div class="step-text">
-                    <h4>Fill out the Form Above</h4>
-                    <p> You're already here, so why not?</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="step">
-            <h3> Step 2.</h3>
-            <div class="step-info">
-                <div class="step-img">
-                    <img src="./assets/images/step-2.svg" alt="" />
-                </div>
-                <div class="step-text">
-                    <h4>Consult With One of Our Trainers</h4>
-                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3> Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-1.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill out the Form Above</h4>
+                        <p> You're already here, so why not?</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="step">
-            <h3> Step 3.</h3>
-            <div class="step-info">
-                <div class="step-img">
-                    <img src="./assets/images/step-3.svg" alt="" />
-                </div>
-                <div class="step-text">
-                    <h4>Get Running.</h4>
-                    <p>Hit the ground running (literally) once your trainer lays oout your plan.</p>
+            <div class="step">
+                <h3> Step 2.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-2.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Consult With One of Our Trainers</h4>
+                        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="step">
-            <h3> Step 4.</h3>
-            <div class="step-info">
-                <div class="step-img">
-                    <img src="./assets/images/step-4.svg" alt="" />
-                </div>
-                <div class="step-text">
-                    <h4>See Results</h4>
-                    <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            <div class="step">
+                <h3> Step 3.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-3.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Get Running.</h4>
+                        <p>Hit the ground running (literally) once your trainer lays oout your plan.</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
+            <div class="step">
+                <h3> Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-4.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>See Results</h4>
+                        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- "meet the trainers" section -->
     <section id="your-trainers">
         <div class="flex-row">
